--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Interest Rate Calculator</h1>
+        <h1>Interest Rate Calculator - Calculate Interest, Loans & Investments</h1>
         
         <form id="calculatorForm">
             <div class="form-group">
